--- a/sass/pages/_desktop-homepage.scss
+++ b/sass/pages/_desktop-homepage.scss
@@ -41,13 +41,6 @@ body {
 .navigation {
     width: 100%;
 
-    // &-link {
-    //     padding: 20px 0;
-    //     width: 100%;
-    //     display: block;
-    //     text-align: center;
-    // }
-
     img {
         align-items: center;
         position: relative;
@@ -55,25 +48,19 @@ body {
         display: block;
         padding: 25px 0;
     }
-
 }
-
-// .search-btn-wrap {
-//     padding: 30px;
-//     background-color: $third-color;
-// }
 
 .search-btn-wrap {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #9356DC;
+    background-color: $primary-color;
     padding: 35px 0;
     box-shadow: rgb(11 10 10 / 18%) 0px 13px 12px 0px inset;
 
     input {
-        border: none;
+        border: 1px solid $primary-color;
         background-color: $primary-color;
 
         &::placeholder {
@@ -82,19 +69,15 @@ body {
 
         font: {
             size: 25px;
-            family: $text-font
+            family: $text-font;
         }
-
     }
-
 }
 
 .fa-map-marker-alt {
     font-size: 22px;
     margin: 15px 15px 15px 130px;
 }
-
-
 
 .head {
     background-color: $third-color;
@@ -103,17 +86,16 @@ body {
 
     h1 {
         font: {
-            family: $text-font;
+            family: $main-font;
             size: 30px;
-            weight: 700
+            weight: 700;
         }
-
     }
 
     p {
         padding: 25px 10px;
         text-align: center;
-        color: gray;
+        color: #808080;
 
         font: {
             family: $text-font;
@@ -124,7 +106,7 @@ body {
     button {
         background-color: $secondary-color;
         padding: 25px 40px;
-        color: white;
+        color: #fff;
         border-radius: 50px;
         font-size: 18px;
         font-weight: 500;
@@ -153,7 +135,7 @@ body {
 
     h2 {
         font: {
-            family: $text-font;
+            family: $main-font;
             size: 40px;
             weight: 700;
         }
@@ -180,11 +162,11 @@ body {
 
     span {
         font-size: 20px;
-        border: 5px solid #9356DC;
+        border: 5px solid $primary-color;
         color: white;
         border-radius: 35px;
         padding: 0 5px;
-        background-color: #9356DC;
+        background-color: $primary-color;
         margin: 0 10px 0 -10px;
     }
 
@@ -194,11 +176,11 @@ body {
     }
 
     .fa-mobile-alt {
-        color: gray;
+        color: #808080;
     }
 
     .fa-list {
-        color: gray;
+        color: #808080;
     }
 
     .fa-store {
@@ -222,7 +204,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: #99E2D0;
+    background-color: $third-color;
     padding: 15px 0 50px 0;
     align-items: stretch;
     flex-wrap: wrap;
@@ -232,19 +214,15 @@ body {
 
         font: {
             size: 25px;
-            family: $text-font;
+            family: $main-font;
             weight: 700;
         }
-
     }
-
-
 }
 
 .rst-ad {
     background-color: #fff;
     border-radius: 18px;
-    /* margin: 20px; */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -252,15 +230,14 @@ body {
 
     a {
         text-decoration: none;
-
     }
 
     span {
         color: darkcyan;
-        background-color: #99E2D0;
+        background-color: $third-color;
         font-size: 17px;
         padding: 6px 30px;
-        font-family: Roboto;
+        font-family: $text-font;
         font-weight: 700;
         margin: 15px 0 0 -106px;
         position: absolute;
@@ -272,16 +249,12 @@ body {
     }
 }
 
-
-
 .ad-info {
     position: relative;
-    // width: 100%;
     margin: 0 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .info {
@@ -292,31 +265,28 @@ body {
         padding: 2px 0;
 
         font: {
-            family: $text-font;
+            family: $main-font;
             size: 20px;
             weight: 800;
-
         }
     }
 
     p {
+        color: #808080;
+
         font: {
             family: $text-font;
             size: 20px;
             weight: 400;
         }
-
-        color:grey;
     }
-
 }
 
 .main-heart1 {
     font-size: 30px;
-    color: gray;
+    color: #808080;
     position: absolute;
     left: 250px;
-    //  margin: 255px 410px; 
     opacity: 1;
 }
 
@@ -326,14 +296,12 @@ body {
     position: absolute;
     left: 250px;
     opacity: 0;
-    // margin: 255px 410px;
 
     &:hover {
         opacity: 1;
         transition-duration: 1s;
         color: lighten($primary-color, 5);
     }
-
 }
 
 // FOOTER
