--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ footer .contacts a {
 footer .contacts .fa-hands-helping {
   color: #fff;
   padding: 10px 0;
-  transform: rotate(-20deg);
+  transform: rotate(-13deg);
   font-size: 14px;
   margin: 0 10px 0 0;
 }
@@ -166,7 +166,7 @@ body {
   box-shadow: rgba(11, 10, 10, 0.18) 0px 13px 12px 0px inset;
 }
 .search-btn-wrap input {
-  border: none;
+  border: 1px solid #9356DC;
   background-color: #9356DC;
   font-size: 25px;
   font-family: Roboto;
@@ -334,10 +334,10 @@ body {
   font-weight: 800;
 }
 .info p {
+  color: grey;
   font-family: Roboto;
   font-size: 20px;
   font-weight: 400;
-  color: grey;
 }
 
 .main-heart1 {
@@ -399,352 +399,319 @@ footer .fa-utensils {
   font-size: 20px;
 }
 
-body {
-  margin: 0;
-  padding: 0;
+@media all and (min-width: 769px) {
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  .rstnt-navigation {
+    display: flex;
+    flex-direction: row;
+    /* padding: 30px 0 15px 0; */
+    align-items: center;
+    position: relative;
+    justify-content: flex-start;
+    padding: 15px 0;
+  }
+  .rstnt-navigation a {
+    text-decoration: none;
+  }
+  .rstnt-navigation i {
+    font-size: 20px;
+    color: #000;
+    margin: 0 -30px 0 28px;
+  }
+  .rstnt-navigation img {
+    width: 175px;
+    align-items: center;
+    display: flex;
+    margin: auto;
+    padding: 15px 0;
+  }
+  .rstnt-navigation img {
+    width: 350px;
+  }
+  .rstnt-navigation i {
+    font-size: 35px;
+  }
+  .nav-img {
+    width: 100%;
+    height: 500px;
+  }
+  .menu {
+    position: relative;
+    margin-top: -60px;
+    background-color: #fafafa;
+    border-radius: 65px 65px 0 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: space-around;
+    align-items: stretch;
+  }
+  .menu h2 {
+    padding: 30px 0 7px 25px;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .line {
+    border-bottom: 3px solid #99E2D0;
+    width: 10%;
+    margin: 0 0 25px 27px;
+  }
+  .menu-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .menu-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 40px 10px 25px;
+  }
+  .menu-title h1 {
+    width: 70%;
+    font-size: 30px;
+    font-weight: 500;
+    font-family: Shrikhand;
+  }
+  .menu-title h1 {
+    font-size: 38px;
+  }
+  .heart {
+    color: gray;
+    font-size: 25px;
+    font-weight: 100;
+    font-size: 33px;
+  }
+  .first {
+    position: relative;
+    animation: menu-animation 2s;
+    animation-timing-function: ease-out;
+  }
+  .second {
+    position: relative;
+    animation: menu-animation 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 0.1s;
+  }
+  .third {
+    position: relative;
+    animation: menu-animation 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 0.18s;
+  }
+  .fourth {
+    position: relative;
+    animation: menu-animation 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 0.26s;
+  }
+  .fifth {
+    position: relative;
+    animation: menu-animation 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 0.34s;
+  }
+  .sixth {
+    position: relative;
+    animation: menu-animation 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 0.42s;
+  }
+  .seventh {
+    position: relative;
+    animation: menu-animation 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 0.5s;
+  }
+  .eighth {
+    position: relative;
+    animation: menu-animation 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 0.58s;
+  }
+  .ninth {
+    position: relative;
+    animation: menu-animation 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 0.66s;
+  }
+  .tenth {
+    position: relative;
+    animation: menu-animation 2s;
+    animation-timing-function: ease-out;
+    animation-delay: 0.74s;
+  }
+  .visible-dish-wrap {
+    background-color: #fff;
+    border-radius: 20px;
+    margin: 25px 20px;
+    overflow: hidden;
+    box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
+    width: 460px;
+  }
+  .visible-dish-wrap:hover {
+    cursor: pointer;
+    transform: rotate(360deg);
+  }
+  .visible-dish-wrap:hover .dish-wrap h3 {
+    width: 70%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .visible-dish-wrap:hover .dish-wrap p {
+    width: 70%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .dish-wrap {
+    width: 134%;
+    display: flex;
+    align-items: flex-start;
+    transition: width 1s ease-out 100ms;
+  }
+  .dish-wrap .fa-check-circle {
+    transition: transform 1s ease-out 10ms;
+  }
+  .dish-wrap:hover {
+    width: 100%;
+  }
+  .dish-wrap:hover .fa-check-circle {
+    transform: rotate(360deg);
+  }
+  .dish {
+    position: relative;
+    width: 75%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    margin: 0;
+  }
+  .dish .dish-price {
+    margin: 55px 15px 0 0;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 800;
+  }
+  .dish-info {
+    width: inherit;
+    padding-left: 15px;
+    margin-right: auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .dish-info h3 {
+    width: 99%;
+    white-space: break-spaces;
+    padding: 0px 0 5px 0px;
+    font-family: Roboto;
+    font-size: 25px;
+    font-weight: 600;
+  }
+  .dish-info p {
+    margin: 0;
+    color: gray;
+    font-family: Roboto;
+    font-size: 20px;
+  }
+  .dish-info h3 {
+    width: 100%;
+    font-size: 25px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    margin: 0;
+    padding: 20px 0 10px 0;
+  }
+  .check {
+    background-color: #99E2D0;
+    border-radius: 0 20px 20px 0;
+    margin-left: 10px;
+  }
+  .fa-check-circle {
+    font-size: 27px;
+    color: #fff;
+    background-color: #99E2D0;
+    border-radius: 20px;
+    position: relative;
+    margin: 35px 39px;
+    font-size: 35px;
+  }
+  .order {
+    display: block;
+    width: 250px;
+    background-color: #FF79DA;
+    color: #fff;
+    border: none;
+    border-radius: 55px;
+    font-size: 19px;
+    box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
+    padding: 20px;
+    text-align: center;
+    align-items: center;
+    margin: 50px auto;
+    padding: 30px 255px 30px 190px;
+    font-size: 30px;
+  }
+  .order:hover {
+    cursor: pointer;
+    box-shadow: -6px 20px 10px 1px rgba(0, 0, 0, 0.15);
+    transition-duration: 1s;
+    background-color: #fface8;
+  }
+  footer {
+    background-color: #000;
+    padding: 0 0 45px 0;
+  }
+  footer h5 {
+    font-family: Shrikhand;
+    font-size: 35px;
+    font-weight: 400;
+    color: #fff;
+    padding: 45px 0 0 40px;
+  }
+  footer .contacts {
+    width: 100%;
+    text-decoration: none;
+    font-family: Roboto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  footer .contacts a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+  footer .fa-hands-helping {
+    transform: rotate(-3deg);
+    font-size: 18px;
+    padding: 15px 10px;
+  }
+  footer .fa-utensils {
+    padding-right: 13px;
+    font-size: 20px;
+  }
+  footer h4 {
+    color: #fff;
+    font-family: Shrikhand;
+    font-size: 35px;
+    font-weight: 400;
+    padding: 45px 0 0 40px;
+  }
 }
-
-.rstnt-navigation {
-  display: flex;
-  flex-direction: row;
-  /* padding: 30px 0 15px 0; */
-  align-items: center;
-  position: relative;
-  justify-content: flex-start;
-  padding: 15px 0;
-}
-.rstnt-navigation a {
-  text-decoration: none;
-}
-.rstnt-navigation i {
-  font-size: 20px;
-  color: #000;
-  margin: 0 -30px 0 28px;
-}
-.rstnt-navigation img {
-  width: 175px;
-  align-items: center;
-  display: flex;
-  margin: auto;
-  padding: 15px 0;
-}
-.rstnt-navigation img {
-  width: 350px;
-}
-.rstnt-navigation i {
-  font-size: 35px;
-}
-
-.nav-img {
-  width: 100%;
-  height: 500px;
-}
-
-.menu {
-  position: relative;
-  margin-top: -60px;
-  background-color: #fafafa;
-  border-radius: 65px 65px 0 0;
-}
-.menu h2 {
-  padding: 30px 0 7px 25px;
-  color: gray;
-  font-family: Roboto;
-  font-size: 20px;
-  font-weight: 300;
-}
-
-.line {
-  border-bottom: 3px solid #99E2D0;
-  width: 7%;
-  margin: 0 0 25px 27px;
-}
-
-.menu-section {
-  display: flex;
-}
-
-.menu-title {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 40px 40px 10px 25px;
-}
-.menu-title h1 {
-  width: 70%;
-  font-size: 30px;
-  font-weight: 500;
-  font-family: Shrikhand;
-}
-
-.heart {
-  color: gray;
-  font-size: 25px;
-  font-weight: 100;
-}
-
-.dish {
-  position: relative;
-  width: 75%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.dish .dish-price {
-  margin-right: 10px;
-  margin-top: 40px;
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 600;
-}
-
-.dish-info {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  width: 95%;
-}
-.dish-info h3 {
-  width: 90%;
-  overflow: visible;
-  white-space: pre-line;
-  text-overflow: ellipsis;
-  padding-bottom: 14px;
-  font-family: Roboto;
-  font-size: 19px;
-  font-weight: 600;
-}
-.dish-info p {
-  width: 90%;
-  color: gray;
-  font-family: Roboto;
-  font-size: 16px;
-}
-.dish-info p:hover {
-  width: 80%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.dish-info h3 {
-  padding-bottom: 0;
-}
-
-.visible-dish-wrap {
-  width: 90%;
-  background-color: #fff;
-  border-radius: 20px;
-  margin: 20px;
-  overflow: hidden;
-  box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
-}
-.visible-dish-wrap:hover {
-  cursor: pointer;
-  transform: rotate(360deg);
-}
-
-.first {
-  position: relative;
-  animation: menu-animation 2s;
-  animation-timing-function: ease-out;
-}
-
-.second {
-  position: relative;
-  animation: menu-animation 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0.1s;
-}
-
-.third {
-  position: relative;
-  animation: menu-animation 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0.18s;
-}
-
-.fourth {
-  position: relative;
-  animation: menu-animation 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0.26s;
-}
-
-.fifth {
-  position: relative;
-  animation: menu-animation 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0.34s;
-}
-
-.sixth {
-  position: relative;
-  animation: menu-animation 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0.42s;
-}
-
-.seventh {
-  position: relative;
-  animation: menu-animation 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0.5s;
-}
-
-.eighth {
-  position: relative;
-  animation: menu-animation 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0.58s;
-}
-
-.ninth {
-  position: relative;
-  animation: menu-animation 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0.66s;
-}
-
-.tenth {
-  position: relative;
-  animation: menu-animation 2s;
-  animation-timing-function: ease-out;
-  animation-delay: 0.74s;
-}
-
-.dish-wrap {
-  width: 134%;
-  display: flex;
-  align-items: center;
-  transition: width 1s ease-out 100ms;
-}
-.dish-wrap > .check .fa-check-circle {
-  font-size: 25px;
-  color: #fff;
-  background-color: #99E2D0;
-  border-radius: 20px;
-  position: relative;
-  margin: 28px 32px;
-  transition: transform 1s ease-out 10ms;
-}
-.dish-wrap:hover {
-  width: 103%;
-}
-.dish-wrap:hover .check {
-  padding-right: 10px;
-}
-.dish-wrap:hover .check .fa-check-circle {
-  font-size: 25px;
-  color: #fff;
-  background-color: #99E2D0;
-  border-radius: 20px;
-  position: relative;
-  margin: 28px 32px;
-  transform: rotate(360deg);
-}
-
-.dish-info {
-  display: block;
-  padding-left: 15px;
-  padding-right: 25px;
-}
-.dish-info:hover > h3 {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-.dish-info > p {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.check {
-  background-color: #99E2D0;
-  border-radius: 0 20px 20px 0;
-  margin-left: 10px;
-  width: 82px;
-  width: 86px;
-  height: 97px;
-}
-
-.fa-check-circle {
-  font-size: 25px;
-  color: #fff;
-  background-color: #99E2D0;
-  border-radius: 20px;
-  position: relative;
-  margin: 28px 32px;
-  font-size: 40px;
-  margin: 50px;
-}
-
-.order {
-  display: block;
-  width: 250px;
-  background-color: #FF79DA;
-  color: #fff;
-  border: none;
-  border-radius: 55px;
-  font-size: 19px;
-  box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
-  padding: 20px;
-  text-align: center;
-  align-items: center;
-  margin: 50px auto;
-}
-.order:hover {
-  cursor: pointer;
-  box-shadow: -6px 20px 10px 1px rgba(0, 0, 0, 0.15);
-  transition-duration: 1s;
-  background-color: #fface8;
-}
-
-footer {
-  background-color: #000;
-  padding: 0 0 45px 0;
-}
-footer h5 {
-  font-family: Shrikhand;
-  font-size: 35px;
-  font-weight: 400;
-  color: #fff;
-  padding: 45px 0 0 40px;
-}
-footer .contacts {
-  width: 100%;
-  text-decoration: none;
-  font-family: Roboto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-}
-footer .contacts a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 20px;
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-}
-footer .fa-hands-helping {
-  transform: rotate(-3deg);
-  font-size: 18px;
-  padding: 15px 10px;
-}
-footer .fa-utensils {
-  padding-right: 13px;
-  font-size: 20px;
-}
-footer h4 {
-  color: #fff;
-  font-family: Shrikhand;
-  font-size: 35px;
-  font-weight: 400;
-  padding: 45px 0 0 40px;
-}
-
 @media all and (max-width: 768px) {
   * {
     padding: 0;
@@ -759,8 +726,8 @@ footer h4 {
     align-items: center;
     animation: hideLoading 2s forwards;
     position: absolute;
-    bottom: 195px;
-    left: 130px;
+    bottom: 304px;
+    left: 123px;
   }
   .navigation {
     width: 100%;
@@ -996,7 +963,7 @@ footer h4 {
   footer .contacts .fa-hands-helping {
     color: #fff;
     padding: 10px 0;
-    transform: rotate(-20deg);
+    transform: rotate(-13deg);
     font-size: 14px;
     margin: 0 10px 0 0;
   }
@@ -1044,14 +1011,13 @@ footer h4 {
   }
   .menu h2 {
     padding: 30px 0 7px 25px;
-    color: gray;
     font-family: Roboto;
     font-size: 20px;
-    font-weight: 300;
+    font-weight: 500;
   }
   .line {
     border-bottom: 3px solid #99E2D0;
-    width: 7%;
+    width: 10%;
     margin: 0 0 25px 27px;
   }
   .menu-title {
@@ -1071,59 +1037,6 @@ footer h4 {
     color: gray;
     font-size: 25px;
     font-weight: 100;
-  }
-  .dish {
-    position: relative;
-    width: 75%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .dish .dish-price {
-    margin-right: 10px;
-    margin-top: 40px;
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 600;
-  }
-  .dish-info {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 95%;
-  }
-  .dish-info h3 {
-    width: 90%;
-    overflow: visible;
-    white-space: pre-line;
-    text-overflow: ellipsis;
-    padding-bottom: 14px;
-    font-family: Roboto;
-    font-size: 19px;
-    font-weight: 600;
-  }
-  .dish-info p {
-    width: 90%;
-    color: gray;
-    font-family: Roboto;
-    font-size: 16px;
-  }
-  .dish-info p:hover {
-    width: 80%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-  .visible-dish-wrap {
-    width: 90%;
-    background-color: #fff;
-    border-radius: 20px;
-    margin: 20px;
-    overflow: hidden;
-    box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
-  }
-  .visible-dish-wrap:hover {
-    cursor: pointer;
-    transform: rotate(360deg);
   }
   .first {
     position: relative;
@@ -1184,59 +1097,92 @@ footer h4 {
     animation-timing-function: ease-out;
     animation-delay: 0.74s;
   }
+  .dish {
+    position: relative;
+    width: 75%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    margin: 0;
+  }
+  .dish .dish-price {
+    margin: 55px 15px 0 0;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 800;
+  }
+  .visible-dish-wrap {
+    background-color: #fff;
+    border-radius: 20px;
+    margin: 25px 20px;
+    overflow: hidden;
+    box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
+  }
+  .visible-dish-wrap:hover {
+    cursor: pointer;
+    transform: rotate(360deg);
+  }
+  .visible-dish-wrap:hover .dish-wrap h3 {
+    width: 70%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .visible-dish-wrap:hover .dish-wrap p {
+    width: 70%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
   .dish-wrap {
     width: 134%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     transition: width 1s ease-out 100ms;
   }
-  .dish-wrap > .check .fa-check-circle {
-    font-size: 25px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 20px;
-    position: relative;
-    margin: 28px 32px;
+  .dish-wrap .fa-check-circle {
     transition: transform 1s ease-out 10ms;
   }
   .dish-wrap:hover {
-    width: 103%;
+    width: 100%;
   }
-  .dish-wrap:hover .check {
-    padding-right: 10px;
-  }
-  .dish-wrap:hover .check .fa-check-circle {
-    font-size: 25px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 20px;
-    position: relative;
-    margin: 28px 32px;
+  .dish-wrap:hover .fa-check-circle {
     transform: rotate(360deg);
   }
   .dish-info {
-    display: block;
+    width: inherit;
     padding-left: 15px;
-    padding-right: 25px;
-  }
-  .dish-info:hover > h3 {
+    margin-right: auto;
     overflow: hidden;
-    white-space: nowrap;
     text-overflow: ellipsis;
+    white-space: nowrap;
   }
-  .dish-info > p {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+  .dish-info h3 {
+    width: 99%;
+    white-space: break-spaces;
+    padding: 0px 0 5px 0px;
+    font-family: Roboto;
+    font-size: 25px;
+    font-weight: 600;
+  }
+  .dish-info p {
+    margin: 0;
+    color: gray;
+    font-family: Roboto;
+    font-size: 20px;
   }
   .check {
     background-color: #99E2D0;
     border-radius: 0 20px 20px 0;
     margin-left: 10px;
-    width: 82px;
   }
   .fa-check-circle {
-    margin: 25px 30px;
+    font-size: 27px;
+    color: #fff;
+    background-color: #99E2D0;
+    border-radius: 20px;
+    position: relative;
+    margin: 35px 39px;
   }
   .order {
     display: block;
@@ -1294,7 +1240,7 @@ footer h4 {
   footer .contacts .fa-hands-helping {
     color: #fff;
     padding: 10px 0;
-    transform: rotate(-20deg);
+    transform: rotate(-13deg);
     font-size: 14px;
     margin: 0 10px 0 0;
   }
