--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import "pages/desktop-homepage";
 @import "pages/desktop-restaurants-pages";
+@import "pages/tablet-homepage";
+@import "pages/tablet-restaurants";
 @import "pages/phone-homepage";
 @import "pages/phone-restaurants-pages";
-@import "pages/contact";
