--- a/sass/pages/_phone-restaurants-pages.scss
+++ b/sass/pages/_phone-restaurants-pages.scss
@@ -1,7 +1,7 @@
 @media all and (max-width: 768px) {
     // THE RESTAURANT'S SITES
 
-    body {
+    * {
         margin: 0;
         padding: 0;
     }
