--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -309,7 +309,7 @@
         font-family: $text-font;
         flex-direction: column;
         align-items: flex-start;
-        margin-left: 15px;
+        // margin-left: 15px;
 
         p {
             position: relative;
