--- a/sass/pages/_desktop-homepage.scss
+++ b/sass/pages/_desktop-homepage.scss
@@ -86,7 +86,7 @@
 
     h1 {
         font: {
-            family: $main-font;
+            family: $text-font;
             size: 30px;
             weight: 700;
         }
@@ -135,7 +135,7 @@
 
     h2 {
         font: {
-            family: $main-font;
+            family: $text-font;
             size: 40px;
             weight: 700;
         }
@@ -210,11 +210,12 @@
     flex-wrap: wrap;
 
     h3 {
-        padding: 0px 560px 10px 0px;
+        padding: 10px 0px 20px 30px;
+        width: auto;
 
         font: {
             size: 25px;
-            family: $main-font;
+            family: $text-font;
             weight: 700;
         }
     }
@@ -265,7 +266,7 @@
         padding: 2px 0;
 
         font: {
-            family: $main-font;
+            family: $text-font;
             size: 20px;
             weight: 800;
         }
