--- a/sass/pages/_desktop-homepage.scss
+++ b/sass/pages/_desktop-homepage.scss
@@ -45,7 +45,7 @@
         align-items: center;
         position: relative;
         margin: auto;
-        display: block;
+        display: flex;
         padding: 25px 0;
     }
 }
